fixing navbar padding and project detail gap

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,9 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2%;
+    padding: 1%;
+    padding-top: 1%;
+    padding-bottom: 1%;
     background-color: white;
     /*filter: drop-shadow(white 0rem 1rem 0.5rem);*/
     /* filter: drop-shadow(#1b1b1b 0rem 0rem 0.05rem); */
@@ -178,7 +180,7 @@ body{
 
 .project-title{
     color: #1b1b1b;
-    font-size: 0.75rem;
+    font-size: 1rem;
     font-weight: bold;
     margin-bottom: 2%;
     text-decoration: none;
